fixed overflow rfom the hero section

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Press+Start+2P&family=Shadows+Into+Light&display=swap');
 @import "tailwindcss";
+
+.shadows {
+  font-family: "Shadows Into Light", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 
 .mobile-schedule-item {
   @apply border-b border-gray-200 py-4;    
@@ -72,7 +80,6 @@
   position: relative;
   width: 100%;
   height: 120%; /* Make it even taller */
-  overflow: hidden;
   clip-path: polygon(0 100%, 100% 0, 100% 100%, 0% 100%); /* Right trapezoid shape with hypotenuse pointing upwards */
 }
 
@@ -80,8 +87,7 @@
 .right-trapezoid {
   position: relative;
   width: 100%;
-  height: 120%; /* Make it even taller */
-  overflow: hidden;
+  height: 109%; /* Make it even taller */
   clip-path: polygon(0% 100%, 25% 0%, 100% 0%, 100% 100%);
 
 
@@ -91,14 +97,14 @@
 }.right-trapezoid {
   position: relative;
   width: 100%;
-  height: 120%; /* Make it even taller */
-  overflow: hidden;
+  /* height: 120%; Make it even taller */
+
   clip-path: polygon(0% 100%, 30% 0%, 100% 0%, 100% 100%); /* Adjusted right trapezoid shape */
 }
 .right-trapezoid {
   position: relative;
   width: 100%;
-  height: 120%; /* Make it even taller */
+  /* height: 120%; */
   overflow: hidden;
   clip-path: polygon(0% 100%, 25% 0%, 100% 0%, 100% 100%); /* Adjusted right trapezoid shape */
 }
